--- a/app/src/main/res/layout/fragment_people.xml
+++ b/app/src/main/res/layout/fragment_people.xml
@@ -5,9 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.PeopleFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        android:id="@+id/recycler_people"/>
+
 
 </FrameLayout>
