--- a/app/src/main/res/layout/layout_chat_item.xml
+++ b/app/src/main/res/layout/layout_chat_item.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@id/txt_name"
+                android:id="@+id/txt_name"
                 android:text="Eddy Lee"
                 android:textSize="24sp"
                 android:textStyle="bold"
@@ -36,7 +36,7 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:id="@id/txt_last_message"
+                android:id="@+id/txt_last_message"
                 android:text="Show me the meaning"
                 android:textSize="18sp"
                 android:textColor="@android:color/black"
