--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="default_text_color">#E1E1E1</color>
-    <color name="chat_list_color">#F5F6F1</color>
+    <color name="default_text_color">#FFE1E1E1</color>
+    <color name="chat_list_color">#FFF5F6F1</color>
+    <color name="chat_bg">#FFF8F9FC</color>
 </resources>
